fix: contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,7 +416,7 @@ footer h5 {
 
 .social-links {
   color: #f2b613;
-  font-size: 1.5em;
+  font-size: 2.5em;
   padding-top: 10px;
   padding-bottom: 20px;
   padding-right: 30px;
